--- a/app/src/main/res/layout/fragment_all_deals.xml
+++ b/app/src/main/res/layout/fragment_all_deals.xml
@@ -25,8 +25,8 @@
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             android:background="@color/backPrimary"
             app:titleCollapseMode="scale"
-            app:expandedTitleMarginStart="60dp"
-            app:expandedTitleMarginBottom="54dp"
+            app:expandedTitleMarginStart="@dimen/allDealsTitleMarginStart"
+            app:expandedTitleMarginBottom="@dimen/allDealsTitleMarginBottom"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar"
             >
 
@@ -34,7 +34,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="Мои дела"
+                app:title="@string/allDealsTitle"
                 app:layout_collapseMode="pin"
                 />
 
@@ -42,16 +42,16 @@
                 android:id="@+id/textDone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:text="Выполнено - "
                 android:textColor="@color/gray"
-                android:textSize="20sp"
+                android:textSize="@dimen/textSizeMid"
                 android:lines="1"
                 android:ellipsize="start"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5"
                 android:layout_gravity="start|bottom"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="@dimen/allDealsTitleMarginStart"
+                android:layout_marginBottom="@dimen/allDealsSubtitleMarginBottom"
                 />
 
             <ImageView
@@ -60,8 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 app:layout_collapseMode="pin"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="@dimen/toolbarMenuMarginEnd"
+                android:layout_marginBottom="@dimen/toolbarMenuMarginBottom"
                 android:src="@drawable/baseline_visibility_24"/>
 
 
@@ -85,7 +85,7 @@
 
         <View android:id="@+id/toolbarShadow"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/toolbarShadowHeight"
             android:layout_gravity="top"
             android:background="@drawable/toolbar_dropshadow"/>
 
@@ -99,8 +99,8 @@
         app:fabSize="normal"
         app:layout_anchor="@id/shadowToolbarLayout"
         app:layout_anchorGravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="@dimen/fabMarginEnd"
+        android:layout_marginBottom="@dimen/fabMarginBottom"
         android:src="@drawable/baseline_add_24" />
 <!--        app:hideMotionSpec=""-->
 
